changed release name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,8 +14,8 @@
   <%= text_field_tag(:sprint_end_date) %>
   </div>  
   <div class='overview_params'>
-  <%= label_tag(:release_order, "Release Order:") %>
-  <%= text_field_tag(:release_order) %>
+  <%= label_tag(:release_name, "Release Name:") %>
+  <%= text_field_tag(:release_name) %>
   </div>
   <%= submit_tag("Generate") %>
 <% end %>
